tests/models/struct/named/u32/pass/le.rs
use dade::model;
#[model]
struct TestModel {
    #[field(le = 2)]
    value: u32,
}
fn main() {}
