tests/models/struct/named/u32/fail/validate.rs
use dade::model;
#[model]
struct TestModel {
    #[field(validate = 2)]
    value: u32,
}
fn main() {}
